## CHANGELOG

- __2015/03/dd__: 0.9.9 release.
    - Issue 21: Implemented boundary constraint parsing.
    - Issue 26: Removing deprecated methods parse_as_nodes, parse_as_strings, readnodes and readlines.

- __2015/02/10__: 0.9.8 release.
    - Migrated natto code home from Bitbucket to GitHub.
    - Improved documentation following said migration.
    - Minor refactoring to Natto::MeCabNode#to_s.
    - Updating LICENSE for year 2015. 

- __2014/12/20__: 0.9.7 release.
    - Issue 14: adding automatic discovery for mecab library; no need to explicitly set MECAB_PATH
    - Issue 15: refactored node-parsing to use Enumerator instead of materializing every node and stuffing into array
    - Issue 17: adding filepath to MeCab and DictionaryInfo
    - Issue 18: bug-fix for node-formatting during default node parse
    - Deprecating parse_as_nodes and parse_as_strings; please use parse instead!
    - CAUTION: parse_as_nodes, parse_as_strings, readnodes and readlines will be removed in the following release!
    - Enhancements to to_s methods for both MeCab and DictionaryInfo
    - Enhancements to TestDictionaryInfo to allow for building user dic during setup on Windows as well
    - Slight enhancement to benchmark task.
    - Updating LICENSE (adding copyright year 2015), adding to all files 
	
- __2013/07/07__: 0.9.6 release.
    - Upgrade to mecab 0.996
    - Adding support for partial parsing mode (-p / --partial)
    - Adding support for marginal probability output mode (-m / --marginal)
    - Adding support for maximum grouping size for unknown words (-M / --max-grouping-size)
    - Outputting warning message for deprecation of :lattice_level option
    - Requiring ffi 1.9.0 or greater
    - Dropping support for Ruby 1.8.7
    - Migrating to minitest
    - Removing automatic library load for Cygwin platform (does not compile) 

- __2012/09/16__: 0.9.5 release.
    - Fixed Issue 9: trimされていない文字列のparse
    - Fixed Issue 10: BUG Segmentation Fault